Caso espcial de Requerimiento con una estimación sin aprobar
Se incluye lineas para validar el req  94112  que no tiene estimación
aprobada pero que requiere calificarse y la logica general es que si no
tiene estimación aprobada no se califica.

--- a/TableroSLAs/PPMCsCrCalCodDetalle.html
+++ b/TableroSLAs/PPMCsCrCalCodDetalle.html
@@ -109,7 +109,8 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th">&nbsp;<label for="mc_info_rs_CCevidencia_salvedad" style="display: block;">Evidencia de</br> salvedad </label><input type="checkbox" id="mc_info_rs_CCevidencia_salvedad" value="1" name="{evidencia_salvedad_Name}" {evidencia_salvedad}></td> 
+                  <td class="th">&nbsp;<label for="mc_info_rs_CCevidencia_salvedad" style="display: block;">Evidencia de<br>
+                    salvedad </label><input type="checkbox" id="mc_info_rs_CCevidencia_salvedad" value="1" name="{evidencia_salvedad_Name}" {evidencia_salvedad}></td> 
                   <td>&nbsp;<label for="mc_info_rs_CCobservacion_salvedad" style="display: block;">Observaciones de evidencia de salvedad</label> <textarea id="mc_info_rs_CCobservacion_salvedad" rows="3" cols="50" name="{observacion_salvedad_Name}">{observacion_salvedad}</textarea></td>
                 </tr>
  
