Cambios IncidentesDetalleNS y cambios derivados de estas modificaciones
1. Se modifica IncidentesDetalleNS la liga de evidencia por cambios del
cliente en sus servidor y dominio, ademas de la localización de estos
repositorios.
2. Se corrige el llamado de los detalles de incidentes, ya que siempre
llamaba a IncidenteDetalle.php, cuando a traves de IncidentesLista
depende del la fecha consultada para presentar los tres distintos
detalles (IncidenteDetalle, IncidenteDetalle2 e IncidenteDetalle3)
3. Por último  las cuentas del cliente que no son de MMyA a traves de
esta plantilla pueden accesar a los 3 detalles y calificar cualquier
incidente, asi que se agrega un parametro para que al leerlo cada
detalle deshabilite todo input de la plantilla, y por consiguiente en
Incidente Lista modifico la propiedad de la liga para que se elimine
(por cualquier cosa) este parametro y los de la MMyA puedan seguir
editando los campos en cuestión

--- a/TableroSLAs/IncidenteDetalle2.html
+++ b/TableroSLAs/IncidenteDetalle2.html
@@ -292,6 +292,8 @@ jQuery(function ($) {
     var params = { };
 //End Common Script Start
 
+{EstadoCampos}
+
 //Controls Selecting @1-C6A722FB
     $('body').ccsBind(function() {
         features["mc_incidentes_reasignacioprimera_fecha_asignacionInlineDatePicker1"] = $('*:ccsControl(mc_incidentes_reasignacio, primera_fecha_asignacion)');
