--- a/TableroSLAs/PPMCsCrbDetalle2.html
+++ b/TableroSLAs/PPMCsCrbDetalle2.html
@@ -353,6 +353,25 @@ jQuery(function ($) {
     var params = { };
 //End Common Script Start
 
+
+$("body *").html(function(buscayreemplaza, reemplaza) {
+        return reemplaza.replace('01/01/1900', '<strong>No entregado</strong>');
+    });
+
+
+
+     $("input[name=checktodos]").change(function(){
+                $('input[id^=mc_info_rs_cr_RE_RC_Artef2CheckBox_Delete_PanelCheckBox_Delete_]').each( function() {                                                             
+                 
+                        if($("input[name=checktodos]:checked").length == 1){
+                                this.checked = true;                                
+                        } else {
+                                this.checked = false;
+                        }
+                });
+           
+        });
+
 //Controls Selecting @1-2A671755
     $('body').ccsBind(function() {
         features["mc_info_rs_ap_ECFechaFirmaCAESInlineDatePicker1"] = $('*:ccsControl(mc_info_rs_ap_EC, FechaFirmaCAES)');
@@ -632,7 +651,7 @@ jQuery(function ($) {
             <!-- END Error -->
             <tr class="Controls">
               <td class="th">SLA a validar&nbsp;<input type="hidden" id="mc_info_rs_ap_EChExiste" value="{hExiste}" name="{hExiste_Name}"></td> 
-              <td><label for="mc_info_rs_ap_EClbSLA" style="display: none;">ListBox1</label> 
+              <td><label style="display: none;" for="mc_info_rs_ap_EClbSLA">ListBox1</label> 
                 <select onchange="MostrarSLA(1)" id="mc_info_rs_ap_EClbSLA" name="{lbSLA_Name}">
                   <option selected value="1">Retraso en entregables</option>
                 </select>
@@ -721,7 +740,7 @@ jQuery(function ($) {
  
             <tr class="Controls">
               <td class="th">&nbsp;<input type="hidden" id="mc_info_rs_ap_EChIDPPMC" value="{hIDPPMC}" name="{hIDPPMC_Name}"></td> 
-              <td>&nbsp;<label for="mc_info_rs_ap_ECCAPFirmada" style="display: none;">CheckBox1</label></td> 
+              <td>&nbsp;<label style="display: none;" for="mc_info_rs_ap_ECCAPFirmada">CheckBox1</label></td> 
               <td>&nbsp; 
                 <div id="divRElbl" style="DISPLAY: inline">
                   Retraso en entregables 
@@ -746,16 +765,16 @@ jQuery(function ($) {
             </tr>
  
             <tr class="Controls">
-              <td class="th"><label for="mc_info_rs_ap_ECevidencia_salvedad" style="display: block;">Evidencia de <br>
+              <td class="th"><label style="display: block;" for="mc_info_rs_ap_ECevidencia_salvedad">Evidencia de <br>
                 salvedad </label><input type="checkbox" id="mc_info_rs_ap_ECevidencia_salvedad" value="1" name="{evidencia_salvedad_Name}" {evidencia_salvedad}></td> 
-              <td>&nbsp;<label for="mc_info_rs_ap_ECobservacion_salvedad" style="display: block;">Observaciones de evidencia de salvedad</label> <textarea id="mc_info_rs_ap_ECobservacion_salvedad" rows="3" cols="50" name="{observacion_salvedad_Name}">{observacion_salvedad}</textarea></td> 
+              <td>&nbsp;<label style="display: block;" for="mc_info_rs_ap_ECobservacion_salvedad">Observaciones de evidencia de salvedad</label> <textarea id="mc_info_rs_ap_ECobservacion_salvedad" rows="3" cols="50" name="{observacion_salvedad_Name}">{observacion_salvedad}</textarea></td> 
               <td>&nbsp;</td> 
               <td>&nbsp;</td>
             </tr>
  
             <tr class="Controls">
               <td class="th">&nbsp;<input type="hidden" id="mc_info_rs_ap_ECsID" value="{sID}" name="{sID_Name}"></td> 
-              <td>&nbsp;<label for="mc_info_rs_ap_EChdFechaUltMod" style="display: none;">hdFechaUltMod</label><input type="hidden" id="mc_info_rs_ap_EChdFechaUltMod" value="{hdFechaUltMod}" name="{hdFechaUltMod_Name}"></td> 
+              <td>&nbsp;<label style="display: none;" for="mc_info_rs_ap_EChdFechaUltMod">hdFechaUltMod</label><input type="hidden" id="mc_info_rs_ap_EChdFechaUltMod" value="{hdFechaUltMod}" name="{hdFechaUltMod_Name}"></td> 
               <td>&nbsp;</td> 
               <td>&nbsp;</td>
             </tr>
@@ -847,8 +866,8 @@ jQuery(function ($) {
  
                   <tr class="Controls">
                     <td class="th"><label for="mc_info_rs_cr_RE_RC_Artef1FechaAlta">&nbsp;</label></td> 
-                    <td><label for="mc_info_rs_cr_RE_RC_Artef1UsuarioAlta" style="display: none;">Usuario alta</label><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1UsuarioAlta" value="{UsuarioAlta}" name="{UsuarioAlta_Name}"><label for="mc_info_rs_cr_RE_RC_Artef1FechaUltMod" style="display: none;">Fecha Ult Mod</label><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1FechaUltMod" value="{FechaUltMod}" name="{FechaUltMod_Name}"><label for="mc_info_rs_cr_RE_RC_Artef1UsuarioUltMod" style="display: none;">Usuario Ult Mod</label><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1UsuarioUltMod" value="{UsuarioUltMod}" name="{UsuarioUltMod_Name}"><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1Id_Padre" value="{Id_Padre}" name="{Id_Padre_Name}"></td> 
-                    <td>&nbsp;<label for="mc_info_rs_cr_RE_RC_Artef1Pct" style="display: none;">Pct</label><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1Pct" value="{Pct}" name="{Pct_Name}"><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1ID_PPMC" value="{ID_PPMC}" name="{ID_PPMC_Name}"></td> 
+                    <td><label style="display: none;" for="mc_info_rs_cr_RE_RC_Artef1UsuarioAlta">Usuario alta</label><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1UsuarioAlta" value="{UsuarioAlta}" name="{UsuarioAlta_Name}"><label style="display: none;" for="mc_info_rs_cr_RE_RC_Artef1FechaUltMod">Fecha Ult Mod</label><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1FechaUltMod" value="{FechaUltMod}" name="{FechaUltMod_Name}"><label style="display: none;" for="mc_info_rs_cr_RE_RC_Artef1UsuarioUltMod">Usuario Ult Mod</label><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1UsuarioUltMod" value="{UsuarioUltMod}" name="{UsuarioUltMod_Name}"><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1Id_Padre" value="{Id_Padre}" name="{Id_Padre_Name}"></td> 
+                    <td>&nbsp;<label style="display: none;" for="mc_info_rs_cr_RE_RC_Artef1Pct">Pct</label><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1Pct" value="{Pct}" name="{Pct_Name}"><input type="hidden" id="mc_info_rs_cr_RE_RC_Artef1ID_PPMC" value="{ID_PPMC}" name="{ID_PPMC_Name}"></td> 
                     <td>&nbsp;</td>
                   </tr>
  
@@ -976,7 +995,7 @@ jQuery(function ($) {
             <td style="TEXT-ALIGN: center">{PctDeductiva}</td> 
             <td style="TEXT-ALIGN: center">{Comentarios}</td> 
             <td>
-              <!-- BEGIN Panel CheckBox_Delete_Panel --><label for="mc_info_rs_cr_RE_RC_Artef2CheckBox_Delete_PanelCheckBox_Delete_{mc_info_rs_cr_RE_RC_Artef2:rowNumber}" style="display: none;">Borrar</label> 
+              <!-- BEGIN Panel CheckBox_Delete_Panel --><label style="display: none;" for="mc_info_rs_cr_RE_RC_Artef2CheckBox_Delete_PanelCheckBox_Delete_{mc_info_rs_cr_RE_RC_Artef2:rowNumber}">Borrar</label> 
               <!-- BEGIN CheckBox CheckBox_Delete --><input type="checkbox" id="mc_info_rs_cr_RE_RC_Artef2CheckBox_Delete_PanelCheckBox_Delete_{mc_info_rs_cr_RE_RC_Artef2:rowNumber}" value="1" name="{CheckBox_Delete_Name}" {CheckBox_Delete}><!-- END CheckBox CheckBox_Delete --><!-- END Panel CheckBox_Delete_Panel -->&nbsp;</td>
           </tr>
  <!-- END Row -->
@@ -1004,6 +1023,8 @@ jQuery(function ($) {
               <!-- BEGIN Button Button_Submit --><input type="submit" id="mc_info_rs_cr_RE_RC_Artef2Button_Submit" class="Button" alt="Enviar" value="Enviar" name="{Button_Name}"><!-- END Button Button_Submit --></td>
           </tr>
         </table>
+ 
+        <p align="right"><input type="checkbox" id="allchkbox" name="checktodos">&nbsp;Seleccionar Todos los Artefactos</p>
       </td>
     </tr>
   </table>
@@ -1015,7 +1036,7 @@ jQuery(function ($) {
 <form enctype="multipart/form-data" method="post" action="{ActionFileUpload}">
   <input type="hidden" value="100000" name="MAX_FILE_SIZE"><br>
   <br>
-  <b>Cargar Artefactos de rchivo: </b><br>
+  <b>Cargar Artefactos de Archivo: </b><br>
   <input type="file" accept="text/csv" name="userfile">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="Procesar">
 </form>
 <!-- END Panel Panel1 -->
